force-app/main/default/objects/ContactUs__c/ContactUs__c.object-meta.xml
<CustomObject>
    <label>Contact Us</label>
    <nameField>
        <displayFormat>CU-{YYYY}{MM}{000000}</displayFormat>
        <label>Contact Us Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>