force-app/main/default/objects/ContactUs__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Us</relationshipLabel>
    <relationshipName>Contact_Us</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>