force-app/main/default/objects/ContactUs__c/fields/Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Collaborators__c</fullName>
    <label>Collaborators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>