force-app/main/default/objects/ContactUs__c/fields/Inquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Number__c</fullName>
    <displayFormat>CU-{YYYY}{MM}{000000}</displayFormat>
    <label>Inquiry Number</label>
    <type>AutoNumber</type>
</CustomField>