force-app/main/default/objects/ContactUs__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <required>true</required>
    <type>Email</type>
</CustomField>